<resources>
    <string name="app_name">GameOn</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sudoku_game">SudokuGameActivity</string>
    <string name="empty_value"></string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="hint_send_sms">Send Text Message</string>
    <string name="sudoku_header">סודוקו</string>

    <string name="user_search_default">בצע חיפוש לאתר משתמשים</string>
    <string name="user_search_searching">מחפש ...</string>
    <string name="user_search_no_users">אין משתמשים מחוברים</string>

    <string name="sudoku_easy">סודוקו קל</string>
    <string name="sudoku_medium">סודוקו בינוני</string>
    <string name="sudoku_hard">סודוקו קשה</string>

    <string name="main_user_title">משתמשים מחוברים</string>

    <string name="activity_settings">Settings</string>
    <string name="activity_clues">Clues</string>
    <string name="activity_puzzle_completed">Puzzle Completed!</string>

    <string name="hello">Hello World, Play!</string>

    <string name="sources">Sources</string>
    <string name="puzzles">Puzzles</string>
    <string name="source_download">Downloaded Puzzles</string>
    <string name="source_unknown">Unknown Source</string>
    <string name="source_all_available">All available</string>
    <string name="author_unknown">Unknown Author</string>
    <string name="puzzle_untitled">Untitled</string>

    <string name="across">Across</string>
    <string name="down">Down</string>
    <string name="completed_in">Completed In</string>
    <string name="total_clues">Total Clues</string>
    <string name="total_boxes">Total Boxes</string>
    <string name="hinted_boxes">Hinted Boxes</string>
    <string name="share">Share</string>
    <string name="done">Done</string>
    <string name="elapsed_time">Elapsed Time:</string>

    <string name="share_text">I finished the %1$s crossword for %2$s in %3$s in #WordsWithCrosses!</string>
    <plurals name="share_text_hinted">
        <item quantity="one">I finished the %1$s crossword for %2$s in %3$s but got one hint (%5$s) in #WordsWithCrosses!</item>
        <item quantity="other">I finished the %1$s crossword for %2$s in %3$s but got %4$d hints (%5$s) in #WordsWithCrosses!</item>
    </plurals>

    <string name="show_all">Show All</string>
    <string name="puzzle_select">Select a puzzle:</string>

    <string name="unknown_extension">Unknown file extension:\u0020</string>
    <string name="loading_puzzle">Loading puzzle…</string>
    <string name="load_puzzle_failed">Failed to load puzzle:\n</string>
    <string name="device_configuration_error">Unable to read device configuration</string>

    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="fit_to_screen">Fit to Screen</string>

    <string name="menu_notes">Notes</string>

    <string name="reveal_puzzle_title">Reveal Entire Puzzle</string>
    <string name="reveal_puzzle_body">Are you sure?</string>

    <string name="dialog_info_title">Puzzle Info</string>
    <string name="dialog_notes_title">Puzzle Notes</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_crossword_game">CrosswordGameActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
