<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gameon.client.sudoku.SudokuGameActivity"
    android:orientation="vertical"
    android:clickable="true"
    android:onClick="onClickCloseNumber"
    android:background="@drawable/bg2_gray">
    <LinearLayout
        android:id="@+id/llHeaderSudoku"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvSudokuTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sudoku_header"
            android:gravity="center"
            android:textSize="35sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llSudokuTable"
        android:layout_width="fill_parent"
        android:layout_height="370dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_below="@id/llHeaderSudoku"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <include layout="@layout/table_sudoku"
                android:id="@+id/tblSudoku_1"/>
            <include layout="@layout/table_sudoku"
                android:id="@+id/tblSudoku_2"/>
            <include layout="@layout/table_sudoku"
                android:id="@+id/tblSudoku_3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <include layout="@layout/table_sudoku"
                android:id="@+id/tblSudoku_4"/>
            <include layout="@layout/table_sudoku"
                android:id="@+id/tblSudoku_5"/>
            <include layout="@layout/table_sudoku"
                android:id="@+id/tblSudoku_6"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <include layout="@layout/table_sudoku"
                android:id="@+id/tblSudoku_7"/>
            <include layout="@layout/table_sudoku"
                android:id="@+id/tblSudoku_8"/>
            <include layout="@layout/table_sudoku"
                android:id="@+id/tblSudoku_9"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_below="@id/llSudokuTable"
        android:id="@+id/tvBorder1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000"/>
    <LinearLayout
        android:layout_below="@+id/tvBorder1"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            >
            <ScrollView
                android:id="@+id/svConsole"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbars="vertical"
                android:layout_marginRight="4dp"
                android:layout_above="@+id/llSendSms">
                <TextView
                    android:id="@+id/tvConsole"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"/>
            </ScrollView>

            <LinearLayout
                android:id="@+id/llSendSms"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/etSms"
                    android:textSize="10sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:hint="@string/hint_send_sms"
                    />
                <Button
                    android:id="@+id/btnSendSms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Send"
                    style="@style/Widget.AppCompat.Light.ActionButton"
                    android:onClick="onClickSendSms"/>
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="#000000"/>
        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/lvConnectedClients"
            android:layout_weight="2">
        </ListView>
    </LinearLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/tblNumber"
        android:layout_above="@id/llSudokuTable"
        >

        <TableRow
            android:id="@+id/tblRowNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_weight="1"
                android:onClick="onClickSetNumber"
                android:id="@+id/btnNum_delete"
                style="@style/ButtonChooseNumber"
                android:scaleType="fitXY" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_1"
                android:layout_weight="1"
                android:onClick="onClickSetNumber"
                android:id="@+id/btnNum_1"
                style="@style/ButtonChooseNumber"
                android:scaleType="fitXY" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_2"
                android:layout_weight="1"
                android:onClick="onClickSetNumber"
                android:id="@+id/btnNum_2"
                style="@style/ButtonChooseNumber"
                android:scaleType="fitXY" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_3"
                android:layout_weight="1"
                android:onClick="onClickSetNumber"
                android:id="@+id/btnNum_3"
                style="@style/ButtonChooseNumber"
                android:scaleType="fitXY" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_4"
                android:layout_weight="1"
                android:onClick="onClickSetNumber"
                android:id="@+id/btnNum_4"
                style="@style/ButtonChooseNumber"
                android:scaleType="fitXY" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_5"
                android:layout_weight="1"
                android:onClick="onClickSetNumber"
                android:id="@+id/btnNum_5"
                style="@style/ButtonChooseNumber"
                android:scaleType="fitXY" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_6"
                android:layout_weight="1"
                android:onClick="onClickSetNumber"
                android:id="@+id/btnNum_6"
                style="@style/ButtonChooseNumber"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_7"
                android:layout_weight="1"
                android:onClick="onClickSetNumber"
                android:id="@+id/btnNum_7"
                style="@style/ButtonChooseNumber"
                android:scaleType="fitXY" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_8"
                android:layout_weight="1"
                android:onClick="onClickSetNumber"
                android:id="@+id/btnNum_8"
                style="@style/ButtonChooseNumber"
                android:scaleType="fitXY" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_9"
                android:layout_weight="1"
                android:onClick="onClickSetNumber"
                android:id="@+id/btnNum_9"
                style="@style/ButtonChooseNumber"
                android:scaleType="fitXY" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
