<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gameon.gameon.MainActivity"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <ImageView
    android:src="@drawable/logo"
    android:layout_width="match_parent"
    android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:padding="16dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_above="@+id/fabSearch"
            android:layout_alignParentTop="true"
            android:background="@drawable/shape_users_bg">

            <TextView
                android:id="@+id/tvUsersOnlineTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_user_title"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="#ffffff"
                android:background="@drawable/shape_users_bg_header"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvUsersOnlineTitle"
                android:id="@+id/lvUsers"
                android:textSize="20dp"
                android:scrollbars="vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tvUsers"
                android:textSize="25dp"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_below="@id/tvUsersOnlineTitle"
                android:text="@string/user_search_default"/>
        </RelativeLayout>


        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fabMenuSudoku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="16dp"
            fab:menu_icon="@drawable/fab_sudoku"
            fab:menu_labels_style="@style/MenuLabelsStyle"
            fab:menu_labels_showAnimation="@anim/jump_from_down"
            fab:menu_labels_hideAnimation="@anim/jump_to_down"
            fab:menu_animationDelayPerItem="0"
            fab:menu_shadowColor="#444"
            fab:menu_labels_position="right"
            fab:menu_colorNormal="@color/yellow_light"
            fab:menu_colorPressed="@color/yellow_dark"
            fab:menu_colorRipple="@color/yellow_ripple">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabSudokuEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                fab:fab_label="@string/sudoku_easy"
                style="@style/MenuButtonsStyle.Yellow"
                android:onClick="onClickStartSudokuGame"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabSudokuMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                fab:fab_label="@string/sudoku_medium"
                style="@style/MenuButtonsStyle.Yellow"
                android:onClick="onClickStartSudokuGame"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabSudokuHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                fab:fab_label="@string/sudoku_hard"
                style="@style/MenuButtonsStyle.Yellow"
                android:onClick="onClickStartSudokuGame"/>

        </com.github.clans.fab.FloatingActionMenu>

        <com.github.clans.fab.FloatingActionMenu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="16dp"
            fab:menu_icon="@drawable/fab_griddler"
            fab:menu_labels_style="@style/MenuLabelsStyle"
            fab:menu_labels_showAnimation="@anim/jump_from_down"
            fab:menu_labels_hideAnimation="@anim/jump_to_down"
            fab:menu_animationDelayPerItem="0"
            fab:menu_shadowColor="#444"
            fab:menu_labels_position="right"
            fab:menu_colorNormal="@color/yellow_light"
            fab:menu_colorPressed="@color/yellow_dark"
            fab:menu_colorRipple="@color/yellow_ripple">

            <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                fab:fab_label="התחל משחק שחור ופתור"
                style="@style/MenuButtonsStyle.Yellow"/>

        </com.github.clans.fab.FloatingActionMenu>

        <com.github.clans.fab.FloatingActionMenu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="16dp"
            fab:menu_icon="@drawable/fab_crossword"
            fab:menu_labels_style="@style/MenuLabelsStyle"
            fab:menu_labels_showAnimation="@anim/jump_from_down"
            fab:menu_labels_hideAnimation="@anim/jump_to_down"
            fab:menu_animationDelayPerItem="0"
            fab:menu_shadowColor="#444"
            fab:menu_labels_position="right"
            fab:menu_colorNormal="@color/yellow_light"
            fab:menu_colorPressed="@color/yellow_dark"
            fab:menu_colorRipple="@color/yellow_ripple">

            <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                fab:fab_label="התחל תשחץ"
                style="@style/MenuButtonsStyle.Yellow"
                android:onClick="onClickStartCrosswordGame"/>

        </com.github.clans.fab.FloatingActionMenu>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="220dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/fab_search"
            fab:menu_labels_style="@style/MenuLabelsStyle"
            fab:menu_colorNormal="@color/orange_light"
            fab:menu_colorPressed="@color/orange_dark"
            fab:menu_colorRipple="@color/orange_ripple"
            fab:menu_shadowColor="#444"
            android:onClick="onClickRefreshUsers"/>

    </RelativeLayout>

</LinearLayout>